make-a-wish-salesforce/src/objects/CRMfusionDBR101__Duplicate_Warning__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Action__c</fullName>
        <inlineHelpText>The action that triggered this duplicate warning.</inlineHelpText>
        <label>Triggering Action</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Type__c</fullName>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Lead to Contact</fullName>
                </value>
                <value>
                    <fullName>Lead to Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipName>Duplicate_Warnings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Unused_Datetime__c</fullName>
        <description>This field is used internally by DupeBlocker, ignore it.</description>
        <label>Ignore - Internal Use Only</label>
        <type>DateTime</type>
    </fields>
    <label>DupeBlocker Duplicate Warning</label>
    <listViews>
        <fullName>CRMfusionDBR101__AccountDuplicateWarnings</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario__c</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account Duplicate Warnings</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__All</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario__c</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>* All *</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__ContactDuplicateWarnings</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario__c</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact Duplicate Warnings</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__LeadDuplicateWarnings</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario__c</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead Duplicate Warnings</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__LeadtoAccountDuplicateWarnings</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario__c</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead to Account</value>
        </filters>
        <label>Lead to Account Duplicate Warnings</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__LeadtoContactDuplicateWarnings</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario__c</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead to Contact</value>
        </filters>
        <label>Lead to Contact Duplicate Warnings</label>
    </listViews>
    <nameField>
        <displayFormat>Warning: {0}</displayFormat>
        <label>Warning Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Duplicate Warnings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>